fixed a gap in sections

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,8 @@
             .section .section h2 {
                 text-align: left;
                 margin-left: 10px;
+                margin-top: 0px;
+                padding-top: 0px;
             }
             .icon {
                 width: 25px;
